💡🏗 Checkpoint ./.glitch-assets:9625737/386 ./index.html:9625737/418 ./script.js:9625737/65

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
   </head>
   <body>
     <canvas id="canvas" style="image-rendering: pixelated;"></canvas>
+    <audio id="background_music">
+      <source type="audio/mpeg" src="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2F8-bit-Arcade4%20Return.mp3?v=1577055610910"/>
+    </audio>
   </body>
 </html>
