--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
-
-    <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
   <body>
     <canvas id="canvas" style="image-rendering: pixelated;"></canvas>
-    <audio id="background_music">
+    <audio id="background_music" loop>
       <source type="audio/mpeg" src="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2F8-bit-Arcade4%20Return.mp3?v=1577055610910"/>
     </audio>
   </body>
