--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <canvas id="canvas" style="image-rendering: pixelated;"></canvas>
+    <canvas id="canvas"></canvas>
     <audio id="background_music" loop>
-      <source type="audio/mpeg" src="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2F8-bit-Arcade4%20Return.mp3?v=1577055610910"/>
+      <source
+        type="audio/mpeg"
+        src="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2F8-bit-Arcade4%20Return.mp3?v=1577055610910"
+      />
     </audio>
   </body>
 </html>
