🌎🏆 Checkpoint ./TODO.md:9625737/53 ./script.js:9625737/503 ./index.html:9625737/126 ./style.css:9625737/256

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div id="canvaswrapper">
+      <canvas id="canvas"></canvas>
+    </div>
     <audio id="background_music" loop>
       <source
         type="audio/mpeg"
