--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello!</title>
+    <title>Les Aventures de Toupac</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2Ficon_192.png?v=1577211541411" />
     <script src="/script.js" defer></script>
   </head>
   <body>
