--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2Ficon_192.png?v=1577211541411" />
+    <link rel="icon" type="image/png" href="/icon_192.png" />
     <script src="/script.js" defer></script>
   </head>
   <body>
@@ -17,7 +17,7 @@
     <audio id="background_music" loop>
       <source
         type="audio/mpeg"
-        src="https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2F8-bit-Arcade4%20Return.mp3?v=1577055610910"
+        src="/8-bit-Arcade4%20Return.mp3"
       />
     </audio>
   </body>
